<resources>
    <string name="Statistics">Statistics</string>
    <string name="_5_sec">+ 5 SEC</string>
    <string name="abdominal_crunch">Abdominal crunch</string>
    <string name="action_settings">Settings</string>
    <string name="air_bike_crunches">Air bike crunches</string>
    <string name="am">AM</string>
    <string name="app_name">Butt &amp; Legs Pro</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back_dialog_content">Progress will be lost</string>
    <string name="back_dialog_negative">Cancel</string>
    <string name="back_dialog_positive">Ok</string>
    <string name="back_dialog_title">Are You Sure?</string>
    <string name="back_extension">Back extension</string>
    <string name="begin_workout">begin workout</string>
    <string name="beginer_desc">Exercise 3 min/days - 200 cal</string>
    <string name="beginner">Easy</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="calories">Calories</string>
    <string name="card_desc" formatted="false">%s Energy /%s min /%s cal</string>
    <string name="challenge">21 DAYS</string>
    <string name="chart_label">AVERAGE TIME</string>
    <string name="chart_label2">Commuters</string>
    <string name="chart_label3">00:15:39</string>
    <string name="chose_level">21 Days Challenge</string>
    <string name="chose_metric">Chose metric</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="communicate">Communicate</string>
    <string name="crisscross_abs">Crisscross</string>
    <string name="crossover_crunch_l_abs">Crossover crunch left leg</string>
    <string name="crossover_crunch_r_abs">Crossover crunch right leg</string>
    <string name="crunch_abs">Crunch</string>
    <string name="custom_workout">Custom Workout</string>
    <string name="day">Day</string>
    <string name="days">days</string>
    <string name="dead_bug">Dead bug</string>
    <string name="default_web_client_id">850824620765-8lgbnmboq3r6h5vnroi9k2hvfcnkntbg.apps.googleusercontent.com</string>
    <string name="dialog_long_rest">Very long rest not effective</string>
    <string name="did_it">Awesome! You achieved the Level!</string>
    <string name="do_it_now">do it now</string>
    <string name="drag_drop_text">Drag and drop to order</string>
    <string name="duration">Duration</string>
    <string name="elbow_plank">Elbow plank</string>
    <string name="enter">Enter</string>
    <string name="feedback">Feedback</string>
    <string name="female">female</string>
    <string name="finish">FINISH</string>
    <string name="firebase_database_url">https://fityplank.firebaseio.com</string>
    <string name="flutter_ficks_abs">Flutter ficks</string>
    <string name="full_plank">Full</string>
    <string name="gcm_defaultSenderId">850824620765</string>
    <string name="get_stronger">Get Into Shape</string>
    <string name="give_5">Give 5</string>
    <string name="give_5_title">Please help us and give 5</string>
    <string name="go">START</string>
    <string name="google_api_key">AIzaSyC0nOcIoHLt5FlFpzCgiJtWpJJckWfeQxI</string>
    <string name="google_app_id">1:850824620765:android:e5bbfcc2efc51350</string>
    <string name="google_crash_reporting_api_key">AIzaSyC0nOcIoHLt5FlFpzCgiJtWpJJckWfeQxI</string>
    <string name="google_storage_bucket">fityplank.appspot.com</string>
    <string name="heel_touch_foot">Heel touch foot</string>
    <string name="high_intensivity">Advanced</string>
    <string name="hip_raise">Hip raise</string>
    <string name="hours">hrs</string>
    <string name="in_app_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuecP/9uqQnK+0iVBr0Bg9tKlJjORNMx9weU6vKjDgaWtY66efR6Rh7wqVthVkeCsvs8/voFVQmBg1hk0zluDAeHQUO4AVPRssdMzThX+zDJuWvdIA0ybatipuap4iJlOsmVpN4b6jUesyXRoBuTNyYMqnZjKTAKWCtQXYbh30cl5lpYpfM+quSp2cZl09v/5O59xEJyykIVSGTuY9kJqfB1reQIRdAnld4GvFsTYdo1jwVTIIIIzGdJR4Am3huToXUXvLPMRCrohJ/XzZxeBJKDxOAF3oc/AE4S5jGAWN1rB6sGDg6qaJSi5G+8dYx/0AXskPnKWHP5xZBTnyr30MQIDAQAB</string>
    <string name="in_app_retry">Please retry in a few seconds.</string>
    <string name="issue_with_purchase">You have issues with Google Play</string>
    <string name="kg">kg</string>
    <string name="knee_to_elbow_crunches_left">Left knee to elbow crunches</string>
    <string name="knee_to_elbow_crunches_right">Right knee to elbow crunches</string>
    <string name="label_or">or</string>
    <string name="label_workout">Workout Plans</string>
    <string name="launch_begin">Start Now!</string>
    <string name="launch_title">WELCOME TO THE ABS 6 PACK PRO</string>
    <string name="launch_title2">lets get into shape now!</string>
    <string name="lb">lb</string>
    <string name="leg_lifts">Leg lifts</string>
    <string name="leg_raise_circles">Leg raise circles</string>
    <string name="level">Level</string>
    <string name="long_arm_crunches">Long arm crunchesk</string>
    <string name="lose_weight">Butt &amp; Legs Pro - Weight Lose</string>
    <string name="main_top_desc">Are you ready to rock</string>
    <string name="main_top_title">Hello!</string>
    <string name="male">male</string>
    <string name="max_7">Maximum is 7 exercises</string>
    <string name="md_back_label">Back</string>
    <string name="md_cancel_label">Cancel</string>
    <string name="md_choose_label">Choose</string>
    <string name="md_custom_label">Custom</string>
    <string name="md_done_label">Done</string>
    <string name="md_error_label">Error</string>
    <string name="md_presets_label">Presets</string>
    <string name="md_storage_perm_error">Your app has not been granted the READ_EXTERNAL_STORAGE permission.</string>
    <string name="mdtp_am">am</string>
    <string name="mdtp_cancel">@android:string/cancel</string>
    <string name="mdtp_date">Date</string>
    <string name="mdtp_date_v1_monthyear">MMMM yyyy</string>
    <string name="mdtp_date_v2_daymonthyear">EEE, MMM dd</string>
    <string name="mdtp_day_of_week_label_typeface">sans-serif</string>
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <string name="mdtp_deleted_key">%1$s deleted</string>
    <string name="mdtp_done_label">Done</string>
    <string name="mdtp_hour_picker_description">Hours circular slider</string>
    <string name="mdtp_item_is_selected">%1$s selected</string>
    <string name="mdtp_minute_picker_description">Minutes circular slider</string>
    <string name="mdtp_ok">@android:string/ok</string>
    <string name="mdtp_pm">pm</string>
    <string name="mdtp_radial_numbers_typeface">sans-serif</string>
    <string name="mdtp_sans_serif">sans-serif</string>
    <string name="mdtp_second_picker_description">Seconds circular slider</string>
    <string name="mdtp_select_day">Select month and day</string>
    <string name="mdtp_select_hours">Select hours</string>
    <string name="mdtp_select_minutes">Select minutes</string>
    <string name="mdtp_select_seconds">Select seconds</string>
    <string name="mdtp_select_year">Select year</string>
    <string name="mdtp_time">Time</string>
    <string name="mdtp_time_placeholder">00</string>
    <string name="mdtp_time_separator">:</string>
    <string name="mdtp_year_picker_description">Year list</string>
    <string name="medium">Medium</string>
    <string name="medium_desc">Exercise 4-5 min/days - 250 cal</string>
    <string name="menu_help_to_translate">Help to enhance performance</string>
    <string name="menu_rate">Rate</string>
    <string name="mid_intensivity">Intermediate</string>
    <string name="min">MIN</string>
    <string name="min_2">Minimum is 2 exercises</string>
    <string name="minute_short">min</string>
    <string name="minutes">mins</string>
    <string name="more">more</string>
    <string name="new_folder">New Folder</string>
    <string name="new_message_notification_title_template">New message: %1$s</string>
    <string name="no_reminder">no reminder</string>
    <string name="not_title">Time to become better</string>
    <string name="ok">ok</string>
    <string name="paused">Paused</string>
    <string name="personal">Personal</string>
    <string name="plank_with_leg_raise_l">Plank with left leg raise</string>
    <string name="plank_with_leg_raise_r">Plank with right leg raise</string>
    <string name="pm">PM</string>
    <string name="poll_desc">click to answer</string>
    <string name="poll_title">What kind of history would you like to see here?</string>
    <string name="preview">prev</string>
    <string name="previous_workout">What you have Done</string>
    <string name="profi">Hard</string>
    <string name="profi_dec">Exercise 6 min/days - 300 cal</string>
    <string name="project_id">fityplank</string>
    <string name="fitnessPro">Fitness Pro</string>
    <string name="question_feedback">Would you mind giving us some feedback?</string>
    <string name="question_like">Enjoying</string>
    <string name="question_rate">How about to rate, then?</string>
    <string name="rate1_negativ">Later</string>
    <string name="rate1_positiv">Nice App!</string>
    <string name="rate2_negativ">No thanks</string>
    <string name="rate2_positiv">OK</string>
    <string name="ready">Ready</string>
    <string name="rec_app_abs_name" />
    <string name="rec_app_but_desc">Your perfect butt here</string>
    <string name="rec_app_but_name">Butt and Legs Workout Pro - Lose Weight At Home</string>
    <string name="rec_app_chest_desc">Ha llegado hora de pecho</string>
    <string name="rec_app_interval_timer_desc">Track your time here</string>
    <string name="rec_app_interval_timer_name">Interval- Fitness Timer</string>
    <string name="rec_app_push_abs_desc">It has come abs time</string>
    <string name="rec_app_push_abs_name">Home Workout - Gym - Fitness And Lose Weight Pro</string>
    <string name="rec_next">next</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="reminder">BODY IDX</string>
    <string name="reminder_card_title">Want to know your body Index?</string>
    <string name="reminder_question">Add Reminder</string>
    <string name="reminders">Reminders</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_and_help_now">Remove ADS now</string>
    <string name="repeat">Repeat</string>
    <string name="reset_positive_label">Reset</string>
    <string name="reset_progress">Reset progress</string>
    <string name="reset_progress_note">Are you sure you want to quit training?</string>
    <string name="rest">RELAX</string>
    <string name="rest_text">Your body need rest</string>
    <string name="restore_workout">redo</string>
    <string name="restored">Restored</string>
    <string name="reverse_crunches">Reverse crunches</string>
    <string name="round">Exercise</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="seconds">secs</string>
    <string name="start_weight">Start track your weight</string>
    <string name="today_weight">Today weight</string>
    <string name="weight">weight</string>
    <string name="why_ad_title">To create an useful app, our programmers had worked very hard and we dont have any income for along time to satisfy our users.</string>
    <string name="why_ad_title_1">By deleting the ad</string>
    <string name="why_ad_title_2">You help us to have some income</string>
    <string name="why_ad_title_3">All the Ads will be remove. Thank you</string>
</resources>